<resources xmlns:tools="http://schemas.android.com/tools">
<string name="cultivation">Season of cultivation</string>
    <string name="hrvest">Harvest Season</string>
    <string name="water">Water</string>
    <string name="color">#228B22</string>
    <string name="title_activity_signup">Sign in</string>
    <string name="open">none</string>
    <string name="close">none</string>
    <string name="hello">A crop is a plant or animal\nproduct that can \nbe grown and \nharvested extensively for \nprofit or subsistence.Crop may \nrefer either to the harvested \nparts or to the harvest \nin a more refined state.\nMost crops are cultivated in agriculture\n. A crop may include \nmacroscopic fungus, or alga.</string>
    <string name="title_activity_assiatant">assiatant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
<string name="blightcure">Prune or stake plants to improve air circulation and reduce fungal problems.
Make sure to disinfect your pruning shears (one part bleach to 4 parts water) after each cut.
Keep the soil under plants clean and free of garden debris. Add a layer of organic compost to prevent the spores from splashing back up onto vegetation.
Drip irrigation and soaker hoses can be used to help keep the foliage dry.
For best control, apply copper-based fungicides early, two weeks before disease normally appears or when weather forecasts predict a long period of wet weather. Alternatively, begin treatment when disease first appears, and repeat every 7-10 days for as long as needed.
Containing copper and pyrethrins, Bonide® Garden Dust is a safe, one-step control for many insect attacks and fungal problems. For best results, cover both the tops and undersides of leaves with a thin uniform film or dust. Depending on foliage density, 10 oz will cover 625 sq ft. Repeat applications every 7-10 days, as needed.
SERENADE Garden is a broad spectrum, preventative bio-fungicide recommended for the control or suppression of many important plant diseases. For best results, treat prior to foliar disease development or at the first sign of infection. Repeat at 7-day intervals or as needed.
Remove and destroy all garden debris after harvest and practice crop rotation the following year.
Burn or bag infected plant parts. Do NOT compost.
</string>
    <string name="asteryellowcure">
        1. Remove diseased plants. Once a plant is infected with aster yellows, it is a lost cause since the disease is incurable. Early diagnosis and prompt removal of infected plants may help reduce the spread of the disease. Although the disease itself is not fatal to the plant, its presence makes it impossible for a plant to fulfill its intended role in the garden.

2. Plant less susceptible plant species. Controlling aster yellows is difficult. As long as infected leafhoppers are around, they can infect plants. A practical way to avoid having problems with this disease is to grow plants that are not as susceptible to aster yellows. Verbena, salvia, nicotiana, geranium, cockscomb, and impatiens are among the least susceptible plants.

3. Control insects. Vegetable growers may protect susceptible crops by using the mesh fabrics that keep leafhoppers and other insects away from the plants. Some growers put strips of aluminum foil between rows because bright reflections of sunlight confuse the leafhoppers.

4. Control weeds. Remove weeds in your lawn, garden, and surrounding areas, including plantain and dandelion that may harbor the disease.
    </string>
    <string name="cankercure">
        Prune flowering trees during blooming when wounds heal fastest.
Remove wilted or dead limbs well below infected areas.
Avoid pruning in early spring and fall when bacteria are most active.
Treat all pruning cuts immediately with Tanglefoot® Tree Pruning Sealer and make sure to disinfect your pruning equipment — one part bleach to 4 parts water — after each cut.
If using string trimmers around the base of trees avoid damaging bark with breathable Tree Wrap to prevent infection.
Brush bark with white latex paint diluted with water to reduce bark-damaging temperature fluctuations.
Research has shown that copper fungicides have some success against this stone fruit problem. However, results are inconsistent. We recommend using it as one part of a total management program.
Remove weeds and grass from around the base of young trees to improve air circulation and keep the trunk and crown dry.
Organocide Plant Doctor is an earth-friendly systemic fungicide that works its way through the entire plant to combat a large number of diseases on ornamentals, turf, fruit and more. Mix 1/3 to 3/4 oz per gallon of water and paint or spray over pruning wounds and surrounding areas.

    </string>
<string name="crowgallcure">
    Select resistant cultivars when possible and purchase plants from a reputable nursery.
Do not buy plants that shows signs of swelling or galling.
When caring for susceptible plants, avoid injury or pruning wounds that may come in contact with the soil.
Use Tree Wrap to protect against string trimmer damage and keep your garden tools clean.
Provide winter protection with natural burlap so bark does not crack.
In many cases, existing galls can be removed with a sharp pruning knife. Destroy the infected plant tissue and treat the wound with pruning sealer. If the plant does not recover, remove and destroy it.
Tip: To get rid of this problem on roses, remove the infested plant and prune out gall tissue. Soak the entire root system and damaged areas for 15 minutes in a solution of 2 level Tbsp of Actinovate per 2-1/2 gallons of water. Replant in healthy soil and apply 1/2 Tbsp per 2-1/2 gallons of water as a foliar spray at weekly intervals.
</string>
    <string name="bacterialwiltcure">
        Control of bacterial wilt depends on control of the cucumber beetle vectors. In areas where the disease is a problem, the use of a systemic, soil-applied insecticide and well-timed foliar application of contact insecticides are prerequisite to profitable melon and cucumber production.

The future holds some promise for the development of wilt-resistant cucumber cultivars that limit the multiplication and movement of the bacteria within the host. No such resistance has been reported in melon.

Roguing wilted plants and the use of trap crops have been suggested to slow the progress of the disease, they are of no practical value unless appropriate insecticide programs are implemented. Bait formulations, which consist of volatile attractants, a feeding stimulant, and a small amount of insecticide, are being developed and show promise.
    </string>
    <string name="fertilizer">Fertilizer</string>
    <string name="camera">Camera</string>
    <string name="process">process</string>
    <string name="get_from_gallery">get from gallery</string>
    <string name="whaeat">Wheat</string>
    <string name="riace">Rice</string>
    <string name="cotaton">Cotton</string>
    <string name="coarn">Corn</string>
    <string name="sugaarcane">Sugarcane</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="accoaunt">Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="rice">Rice</string>
    <string name="wheat">Wheat</string>
    <string name="sugarcane">Sugarcane</string>
    <string name="corn">Corn</string>
    <string name="cotton">Cotton</string>
    <string name="profilen">PROFILE</string>
    <string name="enter_naumber">Enter Number</string>
    <string name="enter_geander">Enter Gender</string>
    <string name="enter_useraname">Enter username</string>
    <string name="enter_citay">Enter city</string>
    <string name="register">Register</string>
    <string name="account">Account</string>
    <string name="personal">Personal</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="specialized">Specialized</string>
    <string name="settingsn">SETTINGS</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_city">Enter city</string>
    <string name="update_settings">Update Settings</string>
    <string name="enter_emaail">Enter Email</string>
    <string name="enter_passaword">Enter Password</string>
    <string name="please_click_to_sign_up">Please Click to Sign-Up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="signin">Signin</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_passaord">Enter Password</string>
    <string name="please_click_to_sign_in">Please Click to Sign-IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="signup">Signup</string>
    <string name="farmer">Farmer</string>
    <string name="namex">name</string>
    <string name="appname">Farmer</string>
    <string name="enter_password">Enter Password</string>
    <string name="farmers">Farmers</string>
    <string name="field_kings">Field Kings</string>
    <string name="crop_assistant" >Crop Assistant</string>
    <string name="weather_report">Weather Report</string>
    <string name="Anthracnosecure">Choose resistant plant varieties when possible and use western grown seeds which have not been exposed to the disease.
If this fungal problem is common, do NOT save your own seed from plantings.
To avoid spreading the disease, keep out of gardens when plants are wet and make sure to disinfect all garden tools (one part bleach to 4 parts water) after use.
Do not compost infected leaves, fruit or stems and thoroughly clean up garden areas in the fall, after harvest, to reduce over wintering sites for the fungal spores.
Safely treat most fungal and bacterial diseases with SERENADE Garden. This broad spectrum bio-fungicide uses a patented strain of Bacillus subtilis that is registered for organic use. Best of all, SERENADE is completely non-toxic to honey bees and beneficial insects.
Liquid copper sprays and sulfur powders should be applied weekly, starting when foliage begins to develop in the early spring and continuing throughout the growing season. Spray early in the day, and avoid applications during hot weather. Seeds may also be treated prior to planting.
Neem oil spray is an organic, multi-purpose fungicide/insecticide/miticide that kills eggs, larvae and adult stages of insects as well as prevents fungal attack on plants. Apply early, at the first sign of spring budding, every 7-14 days as a preventative measure or on a 7-day schedule until existing problems are eliminated.</string>
</resources>