<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin"
    android:background="#fff"
    >

    <EditText
        android:id="@+id/email"
        android:layout_width="315dp"
        android:layout_height="77dp"
        android:layout_marginTop="304dp"
        android:background="@drawable/border"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingRight="35dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <EditText
        android:id="@+id/password"
        android:layout_width="315dp"
        android:layout_height="77dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingRight="35dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/speakemail"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignEnd="@id/email"
        android:layout_alignRight="@id/email"
        android:background="#fff"
        android:src="@drawable/microphone"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <ImageButton
        android:id="@+id/speakpassword"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignEnd="@id/password"
        android:layout_alignRight="@id/password"
        android:background="#fff"
        android:src="@drawable/microphone"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password" />



    <TextView
        android:id="@+id/signupintent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/please_click_to_sign_up"

        android:textColor="#228B22"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/sign_in"
        android:textColor="#228B22"
        android:textSize="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signinbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="#228B22"
        android:text="@string/signin"
        android:textStyle="bold"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/speakpassword"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>