<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="#fff">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/profilen"
        android:textColor="#228B22"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="146dp"
        android:layout_height="113dp"
        android:layout_marginTop="116dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/border"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:paddingRight="35dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <EditText
        android:id="@+id/city"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:hint="@string/enter_city"
        android:inputType="text"
        android:paddingRight="35dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/speakusername"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageButton
        android:id="@+id/speakusername"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignEnd="@id/username"
        android:layout_alignRight="@id/username"
        android:background="#fff"
        android:src="@drawable/microphone"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toTopOf="@+id/username" />

    <ImageButton
        android:id="@+id/speakcity"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignEnd="@id/city"
        android:layout_alignRight="@id/city"
        android:background="#fff"
        android:src="@drawable/microphone"
        app:layout_constraintBottom_toBottomOf="@+id/city"
        app:layout_constraintEnd_toEndOf="@+id/city"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toTopOf="@+id/city" />

    <Button
        android:id="@+id/Signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:background="#228B22"
        android:text="@string/register"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>