<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".marketvalues.marketvalues"
    android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-154dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff">

            <TextView
                android:id="@+id/ricetextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rice"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="25dp"
                app:layout_constraintTop_toBottomOf="@+id/Riceimageview"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/wheattextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wheat"
                android:textAlignment="center"
                android:textColor="#000"
android:layout_margin="5dp"
                android:textSize="25dp"
                app:layout_constraintTop_toBottomOf="@+id/Wheatimageview"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/Sugarcaneimageview"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/sugarcaneimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wheattextview" />

            <TextView
                android:id="@+id/sugarcanetextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugarcane"
                android:textAlignment="center"
android:layout_margin="5dp"
                android:textColor="#000"
                android:textSize="25dp"
                app:layout_constraintTop_toBottomOf="@+id/Sugarcaneimageview"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/Oilseedimageview"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/cornjibran"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cottontextview" />

            <TextView
                android:id="@+id/corntextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/corn"
                android:textAlignment="center"
                android:textColor="#000"
android:layout_margin="5dp"
                android:textSize="25dp"
                app:layout_constraintTop_toBottomOf="@+id/Oilseedimageview"
                tools:layout_editor_absoluteX="0dp" />


            <ImageView
                android:id="@+id/Cottonimageview"
                android:layout_width="match_parent"
                android:layout_height="150dp"

                android:src="@drawable/cottonimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sugarcanetextview" />

            <TextView
                android:id="@+id/cottontextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cotton"
                android:textAlignment="center"
android:layout_margin="5dp"
                android:textColor="#000"
                android:textSize="25dp"
                app:layout_constraintTop_toBottomOf="@+id/Cottonimageview"
                tools:layout_editor_absoluteX="0dp" />



            <ImageView
                android:id="@+id/Wheatimageview"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/wheatimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ricetextview" />

            <ImageView
                android:id="@+id/Riceimageview"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="80dp"
                android:src="@drawable/riceimage"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>