<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cropassistant.assiatant">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cultivation"
        android:textColor="#000"
        android:textSize="25dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/cultivation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Month"
        android:textColor="@color/newgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hrvest"
        android:textAlignment="center"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/cultivation"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/water"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="#000"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/harvest"
       />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fertilizer"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/water"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Days"
        android:textColor="@color/newgreen"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/fertilizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fertilizer"
        android:textColor="@color/newgreen"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
    <TextView
        android:id="@+id/harvest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Month"
        android:textSize="15dp"
        android:textColor="@color/newgreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>